fix: align nav

--- a/style.css
+++ b/style.css
@@ -42,6 +42,11 @@ html {
 	list-style-type: none;
 }
 
+.nav {
+	display: flex;
+	align-items: center;
+}
+
 .nav-list {
 	display: flex;
 	align-items: center;
@@ -464,9 +469,7 @@ html {
 
 	.nav {
 		position: fixed;
-		display: flex;
 		justify-content: center;
-		align-items: center;
 		height: 100vh;
 		width: 100%;
 		z-index: 1;
